--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<hr>
 		
 		<footer><center>
-			<a href="https://www.facebook.com"><i class="fab fa-facebook fa-md"></i></a>
+			<a href="www.facebook.com"><i class="fab fa-facebook fa-md"></i></a>
 			<a href="https://www.instgram.com"><i class="fab fa-instagram fa-md"></i></a>
 			<a href="https://www.google.com"><i class="fab fa-google fa-md"></i></a>
 			<br></center>
